<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.mobilephone_water.MainFragment"
        android:label="@string/main"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.mobilephone_water.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.example.mobilephone_water.StatisticsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.mobilephone_water.ui.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_settingsFragment_to_updateUserDataFragment"
            app:destination="@id/updateUserDataFragment" />
    </fragment>


    <fragment
        android:id="@+id/updateUserDataFragment"
        android:name="com.example.mobilephone_water.ui.fragments.UpdateUserDataFragment"
        android:label="Обновить данные"
        tools:layout="@layout/fragment_update_user_data" />

</navigation>
